--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  author: Paweł Krupa (role based on works by williamyeh)
+  author: Paweł Krupa
   description: Install Fluentd (td-agent version)
   license: MIT
   min_ansible_version: 2.2
@@ -8,6 +8,9 @@ galaxy_info:
   - name: Ubuntu
     versions:
     - xenial
+  - name: debian
+    versions:
+    - jessie
   - name: EL
     versions:
     - 7
