--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -29,8 +29,8 @@
 
 - name: Create custom configuration
   template:
-    src:  "{{ item }}"
-    dest: "/etc/td-agent/conf.d/{{ item.split('/')[-1] }}"
+    src:  "{{ item }}.conf.j2"
+    dest: "/etc/td-agent/conf.d/{{ item.split('/')[-1] }}.conf"
     owner: td-agent
     group: td-agent
   with_items: "{{ fluentd_additional_conf }}"
