--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -8,3 +8,9 @@
   service:
     name: td-agent
     state: restarted
+
+- name: restart metrics service
+  systemd:
+    daemon_reload: yes
+    name: fluentd_exporter
+    state: restarted
