--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -17,7 +17,7 @@
 - name: Create additional configuration files
   template:
     src: "{{ item }}.conf.j2"
-    dest: "/etc/td-agent/{{ item }}.conf"
+    dest: "/etc/td-agent/conf.d/{{ item }}.conf"
     owner: td-agent
     group: td-agent
   with_items:
