--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,10 +1,13 @@
 ---
-- name: Create configuration directory
+- name: Create td-agent directories
   file:
     path: /etc/td-agent/conf.d
     state: directory
     owner: td-agent
     group: td-agent
+  with_items:
+    - /opt/td-agent
+    - /etc/td-agent/conf.d
 
 - name: Create main configuration file
   template:
@@ -29,7 +32,7 @@
 
 - name: Create custom configuration
   template:
-    src:  "{{ item }}.j2"
+    src: "{{ item }}.j2"
     dest: "/etc/td-agent/conf.d/{{ item.split('/')[-1] }}"
     owner: td-agent
     group: td-agent
