--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,20 +3,22 @@ galaxy_info:
   author: Paweł Krupa
   description: Install Fluentd (td-agent version)
   license: MIT
-  min_ansible_version: 2.2
+  min_ansible_version: 2.3
   platforms:
   - name: Ubuntu
     versions:
     - xenial
   - name: Debian
     versions:
-    - jessie
+    - stretch
   - name: EL
     versions:
     - 7
   galaxy_tags:
   - system
   - logging
+  - logs
+  - td-agent
   - fluentd
   - monitoring
 
