--- a/molecule.yml
+++ b/molecule.yml
@@ -29,12 +29,12 @@ docker:
       privileged: true
       volume_mounts:
         - /sys/fs/cgroup:/sys/fs/cgroup:ro
-#    - name: jessie
-#      image: paulfantom/debian-molecule
-#      image_version: 8
-#      privileged: true
-#      volume_mounts:
-#        - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    - name: jessie
+      image: paulfantom/debian-molecule
+      image_version: 8
+      privileged: true
+      volume_mounts:
+        - /sys/fs/cgroup:/sys/fs/cgroup:ro
     - name: centos7
       image: paulfantom/centos-molecule
       image_version: 7
