--- a/tasks/metrics.yml
+++ b/tasks/metrics.yml
@@ -1,24 +1,36 @@
 ---
-- name: Download fluentd_exporter from github and compile it locally
+- name: download fluentd_exporter binary to local folder
   become: no
-  shell: "export GOPATH=/tmp/fluentd_exporter; go get github.com/V3ckt0r/fluentd_exporter"
-  args:
-    creates: /tmp/fluentd_exporter
-  run_once: yes
+  unarchive:
+    src: "https://github.com/V3ckt0r/fluentd_exporter/releases/download/0.2.0/fluentd_exporter-0.2.0.linux-{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}.tgz"
+    dest: "/tmp"
+    remote_src: yes
+    creates: "/tmp/fluentd_exporter-0.2.0.linux-{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}/prometheus"
+  register: _download_binary
+  until: _download_binary is succeeded
+  retries: 5
+  delay: 2
+  # run_once: true
   delegate_to: localhost
+  check_mode: no
 
-- name: install prometheus exporter
+- name: propagate fluentd metrics exporter
   copy:
-    src: /tmp/fluentd_exporter/bin/fluentd_exporter
-    dest: /opt/fluentd_exporter
+    src: "/tmp/fluentd_exporter-0.2.0.linux-{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}/fluentd_exporter"
+    dest: "/usr/local/bin/fluentd_exporter"
     mode: 0755
+    owner: root
+    group: root
+  check_mode: no
+  notify:
+    - restart fluentd metrics service
 
 - name: create systemd fluentd_exporter service file
   template:
     src: fluentd_exporter.service.j2
     dest: /etc/systemd/system/fluentd_exporter.service
   notify:
-  - restart metrics service
+  - restart fluentd metrics service
 
 - name: ensure metrics service is started and enabled
   systemd:
