upgrade to molecule 2.x (#16)

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -1,10 +1,10 @@
 ---
 - hosts: all
-  any_errors_fatal: yes
+  any_errors_fatal: true
   roles:
     - ansible-fluentd
   vars:
-    fluentd_metrics: True
+    fluentd_metrics: true
     fluentd_plugins:
       - name: fluent-plugin-secure-forward
       - url: "https://raw.githubusercontent.com/emsearcy/fluent-plugin-gelf/master/lib/fluent/plugin/out_gelf.rb"
