--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,8 @@
 ---
-
-
 # paths to custom configuration templates
 fluentd_custom_conf: []
 
-fluentd_metrics: False
+fluentd_metrics: false
 
 fluentd_plugins: []
 # - { url: "https://raw.githubusercontent.com/emsearcy/fluent-plugin-gelf/master/lib/fluent/plugin/out_gelf.rb" }
