--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -11,6 +11,6 @@
 
 - name: restart fluentd metrics service
   systemd:
-    daemon_reload: yes
+    daemon_reload: true
     name: fluentd_exporter
     state: restarted
