--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,5 +24,5 @@
 - name: Ensure fluentd (td-agent) service is enabled
   service:
     name: td-agent
-    enabled: yes
+    enabled: true
     use: service
