--- a/tasks/metrics.yml
+++ b/tasks/metrics.yml
@@ -1,10 +1,10 @@
 ---
 - name: download fluentd_exporter binary to local folder
-  become: no
+  become: false
   unarchive:
     src: "https://github.com/V3ckt0r/fluentd_exporter/releases/download/0.2.0/fluentd_exporter-0.2.0.linux-{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}.tgz"
     dest: "/tmp"
-    remote_src: yes
+    remote_src: true
     creates: "/tmp/fluentd_exporter-0.2.0.linux-{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}/prometheus"
   register: _download_binary
   until: _download_binary is succeeded
@@ -12,7 +12,7 @@
   delay: 2
   # run_once: true
   delegate_to: localhost
-  check_mode: no
+  check_mode: false
 
 - name: propagate fluentd metrics exporter
   copy:
@@ -21,7 +21,7 @@
     mode: 0755
     owner: root
     group: root
-  check_mode: no
+  check_mode: false
   notify:
     - restart fluentd metrics service
 
@@ -30,10 +30,10 @@
     src: fluentd_exporter.service.j2
     dest: /etc/systemd/system/fluentd_exporter.service
   notify:
-  - restart fluentd metrics service
+    - restart fluentd metrics service
 
 - name: ensure metrics service is started and enabled
   systemd:
     name: fluentd_exporter
-    enabled: yes
+    enabled: true
     state: started
