--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 go_arch_map:
-  i386: 386
-  x86_64: amd64
-  aarch64: arm64
-  armv7l: arm
-  armv6l: arm
+  i386: '386'
+  x86_64: 'amd64'
+  aarch64: 'arm64'
+  armv7l: 'armv7'
+  armv6l: 'armv6'
