--- a/tasks/preflight.yml
+++ b/tasks/preflight.yml
@@ -22,4 +22,4 @@
 - name: Fail on too small number of file descriptors
   fail:
     msg: "Increase number of file descriptors to more than 1024. Follow instructions at https://docs.fluentd.org/v0.14/articles/before-install"
-  when: file_descriptors.stdout < 1025
+  when: file_descriptors.stdout < "1025"
