Use 3 latest ansible versions for testing (#22)
* Use 3 latest ansible versions for testing

This PR deprecates support for Ansible versions below 2.5 as Molecule  supports Ansible versions >= 2.4 only, as current Ansible version is 2.7.X and as other cloudalchemy roles supports 3 latest Ansible versions. Merging it will result in a [patch] release

* Fix versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ cache: pip
 services:
   - docker
 env:
-  - ANSIBLE='ansible>=2.3.0,<2.4.0'
-  - ANSIBLE='ansible>=2.4.0,<2.5.0'
   - ANSIBLE='ansible>=2.5.0,<2.6.0'
+  - ANSIBLE='ansible>=2.6.0,<2.7.0'
+  - ANSIBLE='ansible>=2.7.0'
 install:
   - pip install ${ANSIBLE} 'ansible-lint>=3.4.15' 'molecule>=2.13.0' docker git-semver 'testinfra>=1.7.0'
 script:
