--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
+---
 sudo: required
 language: python
 cache: pip
 services:
   - docker
 env:
-  - ANSIBLE='ansible>=2.5.0,<2.6.0'
-  - ANSIBLE='ansible>=2.6.0,<2.7.0'
-  - ANSIBLE='ansible>=2.7.0'
+  - ANSIBLE=2.5
+  - ANSIBLE=2.6
+  - ANSIBLE=2.7
 install:
-  - pip install ${ANSIBLE} 'ansible-lint>=3.4.15' 'molecule>=2.13.0' docker git-semver 'testinfra>=1.7.0'
+  - pip install tox-travis git-semver
 script:
-  - molecule test
+  - tox
 deploy:
   provider: script
   skip_cleanup: true
