Support configuration with jinja2 templates (#28)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,71 @@
 ---
+fluentd_sources_conf: []
+# fluentd_sources_conf:
+#   - "type": forward
+#     "params":
+#       "port": 24224
+#       "bind": 0.0.0.0
+#   - "type": dummy
+#     "params":
+#       "dummy": "{\"hello\":\"world\"}"
+#       "tag": testi
+#   - "type": exec
+#     "params":
+#       "command": cmd arg arg
+#       "parse":
+#         "keys": k1 k2 k3
+#       "extract":
+#         "tag_key": k1
+#         "time_key": k2
+#         "time_format": "%Y-%m-%d %H:%M:%S"
+#       "run_interval": 10s
+
+fluentd_outputs_conf: []
+# fluentd_outputs_conf:
+#   - "type": file
+#     "tag": "app.*"
+#     "params":
+#       "path": /tmp/myapp_log
+#       "compress": gzip
+#       "buffer":
+#         "timekey": 1d
+#         "timekey_use_utc": true
+#         "timekey_wait": 10m
+#   - "type": copy
+#     "tag": "*"
+#     "params":
+#       "store":
+#         - "type": file
+#           "path": /tmp/myapp
+#           "compress": gzip
+#           "format":
+#             "localtime": false
+#           "buffer":
+#             "timekey_wait": 10m
+#             "timekey": 86400
+#             "timekey_use_utc": true
+#             "path": /tmp/myapp
+#           "inject":
+#           "time_format": "%Y-%m-%d %H:%M:%S"
+#           "localtime": false
+#         - "type": elasticsearch
+#           "host": fluentd
+#           "port": 9200
+#           "index_name": fluentd
+#           "type_name": fluentd
+fluentd_filters_conf: []
+# fluentd_filters_conf:
+#   - "type": grep
+#     "tag": foo.bar
+#     "params":
+#       "regexp":
+#         - "key": message
+#           "pattern": /cool/
+#         - "key": hostname
+#           "pattern": /^web\d+\.example\.com$/
+#       "exclude":
+#         "key": message
+#         "pattern": uncool
 # paths to custom configuration templates
 fluentd_custom_conf: []
 
