--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -2,6 +2,4 @@
 fluentd_dependencies:
   - apt-transport-https
 
-fluentd_plugins_dependencies:
-  - libcurl4-gnutls-dev
-  - build-essential
+fluentd_plugins_dependencies: []
