--- a/vars/redhat.yml
+++ b/vars/redhat.yml
@@ -2,7 +2,4 @@
 fluentd_dependencies:
   - libselinux-python
 
-fluentd_plugins_dependencies:
-  - gcc
-  - libcurl
-  - libcurl-devel
+fluentd_plugins_dependencies: []
