--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,12 +6,12 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: bionic
-    image: paulfantom/ubuntu-molecule:18.04
-    docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
-    privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+#  - name: bionic
+#    image: paulfantom/ubuntu-molecule:18.04
+#    docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
+#    privileged: true
+#    volumes:
+#      - /sys/fs/cgroup:/sys/fs/cgroup:ro
   - name: xenial
     image: paulfantom/ubuntu-molecule:16.04
     docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
